apply slash syntax to scala build file